add new pitch page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1430,7 +1430,7 @@
                                             
                                             <!-- PDF Pitch Deck Button -->
                                             <div class="text-center mb-4 mt-4">
-                                                <a href="{{ url_for('static', filename='assets/pdfs/unicorn-meat-deck.pdf') }}" 
+                                                <a href="{{ url_for('pitch') }}" 
                                                    target="_blank"
                                                    rel="noopener noreferrer"
                                                    class="btn btn-md border border-2 border-black contrast-shadow-sm hover:-rotate-2 fw-bold"
